Fix home page layout on mobile#5

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -216,7 +216,7 @@
     }
 
     #home-after {
-        margin-top: -28vh;
+        margin-top: -18vh;
         background-color: var(--white2);
     }
 
